--- a/index.qmd
+++ b/index.qmd
@@ -2,14 +2,14 @@
 
 ![](images/clipboard-3780173312.png){fig-align="center"}
 
-### Hello!
+### Xin chào! 
 
-My name is The-Huan, although I also go by Huan or Shaun, depending on where in the world you see me. Hailing from Vietnam, I have lived, studied, and worked in many countries. Most recently though, I can be found thrift-shopping in London.
+My name is The-Huan, although I also go by Huan or Shaun, depending on where in the world you see me. Hailing from Vietnam, I have lived, studied, and worked in many countries like the United States, Argentina, Denmark, Italy, and Singapore. Most recently though, I can be found thrift-shopping in London.
 
-As if it was not enough, I wanted to see more of the world in ways I have not been to previously. So this is it, a learning diary about my journey venturing into Remote Sensing and Earth Observation.
+I am an economist by training with a long stint in the Marketing Tech industry. While on the job, I was fascinated by the power of big data and the cloud. Marrying that with my love for maps and the desire to see more of the world in ways I have not been to previously, I decided to embark on a journey into Remote Sensing and Earth Observation.
 
-I love talking about languages, travel, data science, maps, trains, and music. Hopefully, I can add Remote Sensing to this list by the end of this.
+I also love talking about (and in) foreign languages that I know and am learning. Currently working on German and Mandarin.
 
-### **Get in touch!**
+### **Get in touch**
 
 [Email](mailto:shaun.hoang@gmail.com), [LinkedIn](https://www.linkedin.com/in/shaunhoang/)
