need to start wk4

--- a/index.qmd
+++ b/index.qmd
@@ -4,12 +4,14 @@
 
 ### Xin chào!
 
-My name is The-Huan, although I also go by Huan or Shaun, depending on where in the world you see me. Hailing from Vietnam, I have lived, studied, and worked in many countries like the United States, Argentina, Denmark, Italy, and Singapore. Most recently though, I can be found thrift-shopping in London.
+My name is The-Huan, although I also go by Huan or Shaun, depending on where in the world you see me.
 
-I am an economist by training with a long stint in the Marketing Tech industry. While on the job, I was fascinated by the power of big data and the cloud. Marrying that with my love for maps and the desire to see more of the world in ways I have not been to previously, I decided to embark on a journey into Remote Sensing and Earth Observation.
+Hailing from Vietnam, I have lived, studied, and worked in many countries like the United States, Argentina, Denmark, Italy, and Singapore. Most recently, though, I can be found looking at maps and thrift-shopping in London.
 
-I also love talking about (and in) foreign languages that I know and am learning. Currently working on German and Mandarin.
+I am an economist by training with a long subsequent stint in the Tech industry. While on the job, I was fascinated by the power of "Big Data" and the cloud. Marrying that with the love for maps and earth observation, I embarked on this journey into Remote Sensing. Come on in.
 
-### **Get in touch**
+I also love talking about (and in) foreign languages I know and am learning. Say hi to me in Vietnamese, English, Spanish, and Italian. Currently working on German and Mandarin.
 
-[Email](mailto:shaun.hoang@gmail.com), [LinkedIn](https://www.linkedin.com/in/shaunhoang/)
+### **Since you're still reading...**
+
+Get in touch with me over [email](mailto:shaun.hoang@gmail.com) or [LinkedIn](https://www.linkedin.com/in/shaunhoang/).
