--- a/references.bib
+++ b/references.bib
@@ -97,6 +97,24 @@
   file = {C:\Users\shaun\Zotero\storage\RBVSYWNC\how-lidar-is-used-in-disaster-response.html}
 }
 
+@article{kasnizajumariAnalysisUrbanHeat2023,
+  title = {Analysis of Urban Heat Islands with Landsat Satellite Images and {{GIS}} in {{Kuala Lumpur Metropolitan City}}},
+  author = {Kasniza Jumari, Nasrin Adlin Syahirah and Ahmed, Ali Najah and Huang, Yuk Feng and Ng, Jing Lin and Koo, Chai Hoon and Chong, Kai Lun and Sherif, Mohsen and Elshafie, Ahmed},
+  date = {2023-08-01},
+  journaltitle = {Heliyon},
+  shortjournal = {Heliyon},
+  volume = {9},
+  number = {8},
+  pages = {e18424},
+  issn = {2405-8440},
+  doi = {10.1016/j.heliyon.2023.e18424},
+  url = {https://www.sciencedirect.com/science/article/pii/S2405844023056323},
+  urldate = {2024-02-06},
+  abstract = {Cities are growing geographically in response to the enormous increase in urban population; consequently, comprehending growth and environmental changes is critical for long-term planning. Urbanization transforms naturally permeable surfaces into impermeable surfaces, causing an increase in urban land surface temperature, leading to the phenomenon known as urban heat islands. The urban heat islands are noticeable across Malaysia's rural communities and villages, particularly in Kuala Lumpur. These effects must be addressed to slow, if not halt, climate change and meet the Paris Agreement's 2030 goal. The study posits an application of thermal remote sensing utilizing a space-borne satellite-based technique to demonstrate urban evolution for urban heat island analysis and its relationship to land surface temperature. The urban heat island (UHI) was analyzed by converting infrared radiation into visible thermal images utilizing thermal imaging from remote sensing techniques. The heat island is validated by reference to the characteristics of the normalized difference vegetation index (NDVI), which define the land surface temperature (LST) of distinct locations. Based on the digital information from the satellite, the highest temperature difference between urban and rural regions for a few chosen cities in 2013 varied from 10.8 to 25.5~°C, while in 2021, it ranged from 16.1 to 26.73~°C, highlighting crucial temperature changes. The results from ANOVA test has substantially strengthened the credibility of the significant temperature changes. Some notable reveals are as follows: The Sungai Batu area, due to its rapid development and industry growth, was more vulnerable to elevated urban heat due to reduced vegetation cover; therefore, higher relative vulnerability. Contrary, the Bukit Ketumbar area, which region lies in the woodland region, experienced the lowest, with urban heat islands reading from 2013~at −0.3044 and 0.0154 in 2021. It shows that despite having urban heat islands increase two-fold from 2013 to 2021, increasing the amount of vegetation coverage is a simple and effective way of reducing the urban heat island effect, as evidenced by the low urban heat islands in the Bukit Ketumbar woodland region. The study findings are critical for advising municipal officials and urban planners to decrease urban heat islands by investing in open green spaces.},
+  keywords = {GIS software,Land surface temperature,Landsat images,Urban heat island},
+  file = {C\:\\Users\\shaun\\Zotero\\storage\\JJ7BTI5R\\Kasniza Jumari et al. - 2023 - Analysis of urban heat islands with landsat satell.pdf;C\:\\Users\\shaun\\Zotero\\storage\\Z3XLBXLE\\S2405844023056323.html}
+}
+
 @article{liExtractingBuildingsHighresolution2022,
   title = {Extracting Buildings from High-Resolution Remote Sensing Images by Deep {{ConvNets}} Equipped with Structural-Cue-Guided Feature Alignment},
   author = {Li, Wangbin and Sun, Kaimin and Zhao, Hepeng and Li, Wenzhuo and Wei, Jinjiang and Gao, Song},
